# json_to_csv_complex_structure

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: data.csv  data.json
docs/: API.md
examples/: basic_usage.py  cli_usage.sh
json_csv_converter/: __init__.py  cli.py  converter.py  core.py  exceptions.py
tests/: test_converter.py  test_core.py
